Fix spacing

--- a/css/info.css
+++ b/css/info.css
@@ -2039,7 +2039,7 @@ ol.numbers {
   background-position: center top;
 }
 .page-title .container {
-  height: 150px;
+  height: 100px;
 }
 
 .title-holder {
